# K64F-OS-III-CMake

./: CMakeLists.txt  LICENSE  README.md  load.jlink
FRDM-K64F/OS3-KSDK/: app.c
FRDM-K64F/OS3-KSDK/KDS/: OS3-KSDK Debug J-Link.launch
FRDM-K64F/OS3-KSDK/KDS/Debug/: OS3-KSDK.map
